1526: Fix content alignment utilities

--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -170,6 +170,7 @@
 
   p {
     @include p-max-width;
+    @include align-text;
     margin-bottom: 0;
   }
 
@@ -289,8 +290,24 @@
   max-width: 60em;
 }
 
+@mixin align-text {
+  .u-align--center & {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-align--left & {
+    margin-right: auto;
+  }
+
+  .u-align--right & {
+    margin-left: auto;
+  }
+}
+
 @mixin vf-heading-1 {
   @include heading-max-width--short;
+  @include align-text;
   font-size: 2rem;
   font-weight: 300;
   line-height: 1.3125;
@@ -303,6 +320,7 @@
 
 @mixin vf-heading-2 {
   @include heading-max-width--short;
+  @include align-text;
   font-size: 1.75rem;
   font-weight: 300;
   line-height: 1.2857;
@@ -315,6 +333,7 @@
 
 @mixin vf-heading-3 {
   @include heading-max-width--long;
+  @include align-text;
   font-size: 1.5rem;
   font-weight: 300;
   line-height: 1.333;
@@ -327,6 +346,7 @@
 
 @mixin vf-heading-4 {
   @include heading-max-width--long;
+  @include align-text;
   font-size: 1.375rem;
   font-weight: 300;
   line-height: 1.2727;
@@ -339,6 +359,7 @@
 
 @mixin vf-heading-5 {
   @include p-max-width;
+  @include align-text;
   font-size: 1.125rem;
   font-weight: 300;
   line-height: 1.333;
@@ -351,6 +372,7 @@
 
 @mixin vf-heading-6 {
   @include p-max-width;
+  @include align-text;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
